Enhance layout and styling of personal webpage; add new app icons and update title

--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Hellu</title>
+    <title>*PC startup sounds*</title>
 </head>
 <body>
     <div class="main">
         <div class="desktop">
+            <!-- Trash icon -->
             <a href="#" class="app">
+                <div class="app-icon">
+                    <img src="./trashcan.png" alt="icon" width="50px" height="50px">
+                </div>
+                <div class="app-name">
+                    <b>Trash</b>
+                </div>
+            </a>
+            
+            <!-- Folder icon -->
+            <a href="#" class="app">
+                <div class="app-icon">
+                    <img src="./foldericon.png" alt="icon" width="50px" height="50px">
+                </div>
+                <div class="app-name">
+                    <b>schtuff</b>
+                </div>
+            </a>
+
+            <!-- Hackclub icon -->
+            <a href="https://hackclub.com" class="app">
                 <div class="app-icon">
                     <img src="icon.png" alt="icon" width="50px" height="50px">
                     <div class="shortcut-arrow"></div>
@@ -17,15 +38,20 @@
                 <div class="app-name">
                     <b>Hackclub!</b>
                 </div>
-                <a href="https://github.com/meepstertron" class="app">
-                    <div class="app-icon">
-                        <img src="github-mark.png" alt="icon" width="50px" height="50px">
-                        <div class="shortcut-arrow"></div>
-                    </div>
-                    <div class="app-name">
-                        <b>My Github</b>
-                    </div>
             </a>
+
+            <!-- Github icon -->
+            <a href="https://github.com/meepstertron" class="app">
+                <div class="app-icon">
+                    <img src="github-mark.png" alt="icon" width="50px" height="50px">
+                    <div class="shortcut-arrow"></div>
+                </div>
+                <div class="app-name">
+                    <b>My Github</b>
+                </div>
+            </a>
+
+            
         </div>
         <div class="overlay">
             <div class="window">
@@ -80,7 +106,7 @@
     </div>
     <div class="taskbar">
         <div class="taskbar-left">
-            <div class="start-button"><i><b>Start</b></i></div>
+            <div class="start-button"><img src="./win.png" width="30px"><i><b>Start</b></i></div>
             <div class="program-entry active">
                 <span>About</span>
             </div>
