--- a/simple/index.html
+++ b/simple/index.html
@@ -7,11 +7,17 @@
     <title>My Corner of the interwebs :)</title>
 </head>
 <body>
-    <div class="main">
+    <div class="main wide">
         <h1>Welcome to my little corner of the interwebs! :)</h1>
         <p>My name is <strong>Jan Koch</strong> and I am a swiss fullstack developer. I love to create websites and web applications. I am passionate about learning new technologies and I am always looking for new challenges.</p>
         <p>i am a member of hackclub (check them out <a href="https://hackclub.com">here</a>) and run a small club at my school</p>
         <p>if you want to contact me, you can do so via <a href="mailto:jan.koch@hexagonical.ch">email</a> </p>
     </div>
+    <div class="main fit img-container">
+        <img src="https://github.com/meepstertron/boba-portfolio/blob/main/doodle.png?raw=true" alt="" width="300px">
+    </div>
+    <footer>
+        <p>made with ❤️ by Jan Koch</p>
+        <p>opensource'd at <a href="https://github.com/meepstertron/boba-portfolio">github</a></p>
 </body>
 </html>
